# gros

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/examples/: earth_black_hole_trajectory_animate.py
src/gros/utils/: datahandling.py
